tests/invalid/set_literal_mixed_types/main.py
def run_case() -> None:
    s = {1, "x"}
    print(s)


if __name__ == "__main__":
    run_case()
